# NeirCrack

./: .gitignore  CMakeLists.txt  main.cpp
example/: CmakeLists.txt  main.cpp
include/: neirCrack.hpp
include/ValueCrack/: gameDataMemory.hpp  gameValueCrack.hpp  gameValueMemoryOffset.hpp
src/: gameDataMemoryOffset.cpp  neirCrack.cpp
src/ValueCrack/: gameDataMemory.cpp  gameDataMemoryOffset.cpp  gameValueCrack.cpp
